# rspaces

./: Cargo.toml  LICENSE  README.md
docs/: basic.md  concurrent.md  distributed.md  serilization.md
examples/: chat_app.rs  hello_concurrent.rs  hello_distributed.rs  hello_world.rs
rspace-macro/: Cargo.toml
rspace-macro/src/: lib.rs
src/: drain_filter.rs  gate.rs  lib.rs  macros.rs  query.rs  repository.rs  sequential_space.rs  space.rs  tuple.rs
tests/: tests.rs
