[package]
name = "rspaces"
description = "A rust implementation of pspaces, used to teach distributed systems programming"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1"
rspace-macro = {path = "rspace-macro"}


[workspace]
members = ["rspace-macro"]